--- a/app/templates/edit_todo.html
+++ b/app/templates/edit_todo.html
@@ -127,9 +127,10 @@
 
         <form method="post">
             {% csrf_token %}
-            <input type="text" name="title" placeholder="Enter task title" required>
-            <textarea name="description" placeholder="Enter task description" rows="3" required></textarea>
-            <button type="submit">Add Task</button>
+            <input type="text" name="title" placeholder="Edit task title" required
+            value="{{ obj.title }}">
+            <textarea name="description" placeholder="Edit task description" rows="3" required></textarea>
+            <button type="submit">Update Task</button>
         </form>
 
         {% for todo in res %}
@@ -141,8 +142,8 @@
             <p class="todo-desc">{{todo.desc}}</p>
 
             <div class="actions">
-                <a href="/edit/{{todo.sno}}/" class="edit-btn">Edit</a>
-                <a href="/delete/{{todo.sno}}/" class="delete-btn" onclick="return confirm('Are you sure you want to delete this task?');">Delete</a>
+                <a href="/edit/{{todo.srno}}" class="edit-btn">Edit</a>
+                <a href="/delete/{{todo.srno}}" class="delete-btn" onclick="return confirm('Are you sure you want to delete this task?');">Delete</a>
             </div>
         </div>
         {% endfor %}
