added the logout page

--- a/app/templates/edit_todo.html
+++ b/app/templates/edit_todo.html
@@ -148,7 +148,7 @@
         </div>
         {% endfor %}
 
-        <a href="/" class="logout-btn">Logout</a>
+        <a href="" class="logout-btn">Logout</a>
     </div>
 </body>
 </html>
